--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <tr><td>8ping</td><td>Responds with uptime, channels joined, and the prefix of the bot.</td></tr>
     <tr><td>8join</td><td>Joins the senders channel.</td></tr>
     <tr><td>8part</td><td>Leaves the senders channel.</td></tr>
+    <tr><td>8commands</td><td>Responds with all available commands.</td></tr>
   </table>
 
   <div class="footer">
