--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <tr><td>8p</td><td>Sends pyramid of messages in the chat.</td></tr>
     <tr><td>8join</td><td>Joins specified channel.</td></tr>
     <tr><td>8part</td><td>Leaves specified channel.</td></tr>
+    <tr><td>8afk</td><td>Sets AFK Status.</td></tr>
   </table>
 
   <h2>Twitch Commands:</h2>
